<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:orientation="vertical"
    tools:context=".features.addTask.AddTaskActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/taskDescription"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/edtTaskDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/taskHint"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dueDate"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/edtDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dateHint"/>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:text="@string/save"
        android:layout_marginTop="20dp"/>

</LinearLayout>